# django-biolerplate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cli/: app_manager.py  cli.py  console.py  file_manager.py  project_manager.py  script.py  secret_generator.py  settings_manager.py
src/: cli.py  features.py
src/boilerplate/: .gitignore  __init__.py  manage.py  requirements.txt
src/boilerplate/__APP__/: views.py
src/boilerplate/__PROJECT__/: asgi.py  urls.py  wsgi.py
src/boilerplate/__PROJECT__/settings/: base.py  development.py  production.py
