
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-boilerplate-generator"
version = "0.1.0"
description = "A CLI tool to generate Django projects with a custom boilerplate"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sankalp Tharu", email = "sankalptharu50028@gmail.com"}
]
dependencies = [
    "Django>=5.2"
]

[project.urls]
Homepage = "https://github.com/S4NKALP/django-boilerplate-generator"
Repository = "https://github.com/S4NKALP/django-boilerplate-generator"

[project.scripts]
django-boilerplate = "cli:run"

[tool.setuptools.packages.find]
where = ["src"]
